--- a/lenguaje-programacion/EmpresaTelefonica/nbproject/project.properties
+++ b/lenguaje-programacion/EmpresaTelefonica/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EmpresaTelefonica
 excludes=
 file.reference.sqlite-jdbc-3.36.0.3.jar=C:\\Users\\spart\\OneDrive\\Documentos\\clase06-2bim-DanielTorres200\\EjemploBD\\lib\\sqlite-jdbc-3.36.0.3.jar
+file.reference.sqlite-jdbc-3.36.0.3.jar-1=C:\\Users\\Matias Quezada\\clase06-2bim-Isaac-Quezada\\EjemploBD02\\lib\\sqlite-jdbc-3.36.0.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.36.0.3.jar}
+    ${file.reference.sqlite-jdbc-3.36.0.3.jar}:\
+    ${file.reference.sqlite-jdbc-3.36.0.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=EmpresaTelefonica
-main.class=Paquete01.Ejecutor
+main.class=Paquete01.Ejecutor1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
