--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /lenguaje-programacion/EmpresaTelefonica/nbproject/private/
 /lenguaje-programacion/EmpresaTelefonica/build/
+/lenguaje-programacion/EmpresaTelefonica/dist/
